# sempkg

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  NOTICE  README.md  install.ps1  install.sh  pyproject.toml  sempkg.toml  uninstall.ps1  uninstall.sh
.claude/: settings.json
.claude/skills/rust-checks/: SKILL.md
.claude/skills/sempkg/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: sempkg.agent.md
.github/prompts/: research-package.prompt.md
.github/skills/run-tests/: SKILL.md
.github/workflows/: build-wheel.yml  release.yml  tests.yml
deploy/: README.md  agent-entrypoint.sh  docker-compose.yml
deploy/examples/: github-actions-publish-latest.yml
docs/: adr-001-lancedb-doc-index.md  cgbundle-spec.md  gpu-cuda.md  gpu-vulkan.md  model-roadmap.md  parity-harness.md  plan-sempkg-add-from-github.md  registry-server.md  reranker-design.md  sembundle-spec.md  sembundle.md  sempkg.md  vision-roadmap.md
docs/arch/adr/: adr-002-hybrid-vector-bm25-search.md  adr-003-semgraph-native-writer.md  adr-004-semgraph-resolution-and-sync.md  adr-005-tier3-language-packs.md  adr-006-codegraph-cutover.md
docs/design/: agent-server-prototype.md  model-providers.md  query-tool-design.md
docs/plans/: plan-ci-workflow-improvements.md  plan-codebase-review-recommendations.md  plan-knowledge-agent-server.md  plan-local-datasheet-index.md  plan-mcp-tool-pruning.md  plan-sembundle-source-code-index.md
docs/roadmap/: qmd-improvement-backlog.md  vision-roadmap.md
keys/: public.pem
scripts/: bump_versions.py  mcp_query_bench.py  mcp_query_probe.py
src/cgbundle/: Cargo.toml  DEV-GUIDE.md
src/cgbundle/src/: build.rs  error.rs  keygen.rs  main.rs  manifest.rs  pack.rs  publish.rs  sign.rs  validate.rs  verify.rs
src/cgbundle_registry/: Dockerfile  __init__.py  app.py  auth.py  cli.py  storage.py
src/codegraph_hub/: __init__.py  __main__.py  bundle_store.py  cgbundle.py  cli.py  codegraph.py  lance.py  qmd.py  registry.py  server.py  workspace_manifest.py
src/sembundle/: Cargo.toml  DEV-GUIDE.md
src/sembundle/src/: build.rs  checksum.rs  consts.rs  error.rs  keygen.rs  lib.rs  main.rs  manifest.rs  pack.rs  publish.rs  reader.rs  sign.rs  validate.rs  verify.rs
src/sembundle/tests/: multi_root_build.rs  roundtrip.rs
src/semgraph/: Cargo.toml
src/semgraph/src/: index.rs  lib.rs  model.rs  parity.rs  parse.rs  resolve.rs  writer.rs
src/semgraph/src/queries/: c.refs.scm  c.scm  cpp.refs.scm  cpp.scm  csharp.refs.scm  csharp.scm  go.refs.scm  go.scm  java.refs.scm  java.scm  kotlin.refs.scm  kotlin.scm  php.refs.scm  php.scm  python.refs.scm  python.scm  ruby.refs.scm  ruby.scm  rust.refs.scm  rust.scm  scala.refs.scm  scala.scm  swift.refs.scm  swift.scm  typescript.refs.scm  typescript.scm
src/semgraph/src/tier3/: csharp.rs  kotlin.rs  mod.rs  php.rs  ruby.rs  scala.rs  swift.rs
src/semgraph/tests/: bench.rs  parity_offline.rs  resolve_parity.rs  roundtrip.rs  sync_tests.rs  tier2_parity.rs  tier3_parity.rs
src/sempkg/: Cargo.toml  DEV-GUIDE.md
src/sempkg/src/: accel.rs  cli.rs  codegraph.rs  embedding.rs  error.rs  github.rs  graph.rs  lance.rs  llama_runtime.rs  main.rs  manifest.rs  mcp.rs  packages.rs  qmd.rs  query_expansion.rs  registry.rs  reranker.rs  status.rs  store.rs  verify.rs
src/sempkg/src/providers/: mod.rs  openai.rs
src/sempkg_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/sempkg_agent/sempkg_agent/: __init__.py  __main__.py  a2a_compat.py  a2a_executor.py  a2a_server.py  agent.py  cli.py  config.py  logging_config.py  mcp_server.py  mcp_tools.py  models.py  prompts.py  render.py  rest.py  schemas.py  streaming.py  tracing.py  verify.py
src/sempkg_agent/sempkg_agent/static/: index.html
src/sempkg_agent/tests/: conftest.py  test_agent.py  test_agent_backend_functional.py  test_config.py  test_models.py  test_prompts.py  test_publish_corpus_functional.py  test_render.py  test_rest.py  test_schemas.py  test_verify.py
src/sempkg_registry/: Dockerfile  __init__.py  app.py  auth.py  cli.py  storage.py
tests/: conftest.py  test_bundle_mcp_tools.py  test_bundle_store.py  test_cgbundle.py  test_cli.py  test_codegraph.py  test_mcp_functional.py  test_registry.py  test_registry_app.py  test_registry_auth.py  test_registry_storage.py  test_workspace_manifest.py
tests/fixtures/: .gitattributes  README.md  codegraph-v4-c.db  codegraph-v4-cpp.db  codegraph-v4-go.db  codegraph-v4-java.db  codegraph-v4.db  parity-whitelist.json
tests/fixtures/graph-src-tier2/c/: geometry.c  geometry.h  main.c
tests/fixtures/graph-src-tier2/cpp/: geometry.cpp  geometry.hpp  main.cpp  shapes.hpp
tests/fixtures/graph-src-tier2/go/: embed.go  geometry.go  shapes.go
tests/fixtures/graph-src-tier2/java/: Animals.java  Geometry.java  Point.java  Shapes.java
tests/fixtures/graph-src-tier3/: README.md  csharp.db  kotlin.db  php.db  ruby.db  scala.db  swift.db
tests/fixtures/graph-src-tier3/csharp/: Main.cs  Shapes.cs
tests/fixtures/graph-src-tier3/kotlin/: Main.kt  Shapes.kt
tests/fixtures/graph-src-tier3/php/: Shapes.php  main.php
tests/fixtures/graph-src-tier3/ruby/: main.rb  shapes.rb
tests/fixtures/graph-src-tier3/scala/: Main.scala  Shapes.scala
tests/fixtures/graph-src-tier3/swift/: Main.swift  Shapes.swift
tests/fixtures/graph-src/python/: main.py  shapes.py  unresolved.py
tests/fixtures/graph-src/rust/: geometry.rs  lib.rs
tests/fixtures/graph-src/typescript/: geometry.ts  index.ts
tests/uninstall/: smoke.ps1  smoke.sh
