[workspace]
resolver = "2"
members = [
    "src/sembundle",
    "src/semgraph",
    "src/sempkg",
]

# Shared dependency versions. Both member crates reference these via
# `dep = { workspace = true }` so a version or feature can only be pinned once.
# This is what keeps `ed25519-dalek` (and the rest of the crypto/archive stack)
# from drifting across the crate boundary — a version split there would break
# signature verification when a bundle written by `sembundle` is read by `sempkg`.
#
# Feature sets are additive across the workspace: a member may add crate-specific
# features (e.g. reqwest `multipart` vs `json`, tokio `full` vs `rt`) on top of the
# baseline declared here.
[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
tar = "0.4"
flate2 = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
thiserror = "2"
tempfile = "3"
which = "8"
reqwest = { version = "0.13" }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
lancedb = "0.31"
arrow-array = "58"
arrow-schema = "58"
tokio = { version = "1" }
glob = "0.3"
rusqlite = { version = "0.40", features = ["bundled"] }
rayon = "1"
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
