[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project]
name = "codegraph-hub"
version = "0.1.0"
description = "Multi-repo codegraph MCP server for GitHub Copilot — indexes internal packages and exposes them via MCP tools"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.1",
    "tomli-w>=1.0",
    "lancedb>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]
registry = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "cryptography>=42",
]

[project.scripts]
codegraph-hub = "codegraph_hub.cli:main_cli"
cgbundle-registry = "cgbundle_registry.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/codegraph_hub --cov-report=term-missing"

[tool.uv]
# Prefer uv for dependency management and environment sync in this project.
managed = true