[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "sempkg-registry"
version = "0.6.0"



description = "Self-hosted sembundle registry server for semantic index packages"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]

[project.scripts]
sempkg-registry = "sempkg_registry.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "functional: end-to-end tests requiring the sempkg binary and installed bundles (skipped when binary absent)",
]

[tool.uv]
# Prefer uv for dependency management and environment sync in this project.
managed = true