[package]
name = "cgbundle"
version = "0.1.0"
edition = "2021"
description = "CGBundle CLI — pack and unpack CodeGraph semantic index archives"

[[bin]]
name = "cgbundle"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
sha2      = "0.10"
hex       = "0.4"
tar       = "0.4"
flate2    = "1"
chrono    = { version = "0.4", features = ["serde"] }
walkdir   = "2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
