[package]
name = "sembundle"
version = "0.6.0"






edition = "2021"
description = "SemBundle CLI — pack and publish semantic index archives"

[lib]
name = "sembundle"
path = "src/lib.rs"

[[bin]]
name = "sembundle"
path = "src/main.rs"

[dependencies]
clap      = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
sha2      = { workspace = true }
hex       = { workspace = true }
tar       = { workspace = true }
flate2    = { workspace = true }
chrono    = { workspace = true }
walkdir   = { workspace = true }
thiserror = { workspace = true }
tempfile  = { workspace = true }
which     = { workspace = true }
reqwest   = { workspace = true, features = ["blocking", "multipart"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand      = { version = "0.8", features = ["getrandom"] }
zeroize   = "1"
lancedb   = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
tokio     = { workspace = true, features = ["rt", "rt-multi-thread"] }
glob      = { workspace = true }
rusqlite  = { workspace = true }

[dev-dependencies]
