[package]
name = "semgraph"
version = "0.6.0"
edition = "2021"
description = "Native reader/writer for CodeGraph `codegraph.db` graph databases (schema v4), shared by sempkg (read path) and sembundle (Phase 2 write path)"

[lib]
name = "semgraph"
path = "src/lib.rs"

[dependencies]
rusqlite   = { workspace = true }
thiserror  = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
rayon      = "1"
walkdir    = { workspace = true }
streaming-iterator     = "0.1"
tree-sitter            = "0.25"
tree-sitter-rust       = "0.24"
tree-sitter-python     = "0.25"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = { workspace = true }
