[package]
name = "semgraph"
version = "0.6.0"
edition = "2021"
description = "Native reader/writer for CodeGraph `codegraph.db` graph databases (schema v4), shared by sempkg (read path) and sembundle (Phase 2 write path)"

[lib]
name = "semgraph"
path = "src/lib.rs"

[dependencies]
rusqlite   = { workspace = true }
thiserror  = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
rayon      = { workspace = true }
walkdir    = { workspace = true }
streaming-iterator     = { workspace = true }
tree-sitter            = { workspace = true }
tree-sitter-rust       = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-typescript = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
