[package]
name = "sempkg"
version = "0.1.0"
edition = "2021"
description = "sempkg — semantic package manager for sembundle archives with MCP server support"

[[bin]]
name = "sempkg"
path = "src/main.rs"

[features]
default  = []
# Enable in-process Qwen3-Reranker-0.6B GGUF inference via llama-cpp-2.
# Requires cmake + MSVC (Windows) or cmake + clang (Linux/macOS) at build time.
# Build with:  cargo build --features reranker
reranker = ["dep:llama-cpp-2"]

[dependencies]
sembundle    = { path = "../sembundle" }
clap         = { version = "4", features = ["derive", "env"] }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
toml_edit    = "0.22"
reqwest      = { version = "0.12", features = ["blocking", "json"] }
sha2         = "0.10"
hex          = "0.4"
tar          = "0.4"
flate2       = "1"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
lancedb      = "0.14"
lance-index  = "0.21"
arrow-array  = "53"
arrow-schema = "53"
futures      = "0.3"
glob         = "0.3"
anyhow       = "1"
thiserror    = "1"
chrono       = { version = "0.4", features = ["serde"] }
dirs         = "5"
tempfile     = "3"
walkdir      = "2"
which        = "6"

# Optional reranker dependency (enabled via --features reranker)
# llama-cpp-2 wraps llama.cpp with native Qwen3 + RANK-pooling reranker support.
llama-cpp-2 = { version = "0.1", optional = true }
