[package]
name = "sempkg"
version = "0.6.1"






edition = "2021"
description = "sempkg — semantic package manager for sembundle archives with MCP server support"

[[bin]]
name = "sempkg"
path = "src/main.rs"

[features]
default  = []
# Enable in-process Qwen3-Reranker-0.6B GGUF inference via llama-cpp-2.
# Requires cmake + MSVC (Windows) or cmake + clang (Linux/macOS) at build time.
# Build with:  cargo build --features reranker
reranker = ["dep:llama-cpp-2"]
# Enable in-process vector embeddings (Qwen3-Embedding-0.6B) + generative query
# expansion (qmd-query-expansion-1.7B) via llama-cpp-2. Independent of `reranker`;
# both can be enabled together. Requires the same cmake/compiler toolchain.
# Build with:  cargo build --features embeddings
embeddings = ["dep:llama-cpp-2"]

# --- GPU acceleration backends ------------------------------------------------
# Compile llama.cpp with a GPU backend so local inference (embeddings, query
# expansion, reranker) can offload to the GPU. These are additive: combine one
# with `embeddings` and/or `reranker`, e.g.
#     cargo build --release --features embeddings,reranker,cuda
# With a GPU backend present, `gpu = "auto"` (the default) offloads automatically.
# Each backend needs its toolchain/drivers installed at build time:
#   cuda   — NVIDIA CUDA toolkit (Maxwell+ GPUs, incl. GTX 9xx series)
#   vulkan — Vulkan SDK; vendor-neutral, a good fallback for older NVIDIA/AMD
#   rocm   — AMD ROCm/HIP
#   metal  — Apple Silicon
cuda   = ["dep:llama-cpp-2", "llama-cpp-2/cuda"]
vulkan = ["dep:llama-cpp-2", "llama-cpp-2/vulkan"]
rocm   = ["dep:llama-cpp-2", "llama-cpp-2/rocm"]
metal  = ["dep:llama-cpp-2", "llama-cpp-2/metal"]

[dependencies]
sembundle    = { path = "../sembundle" }
clap         = { workspace = true }
tokio        = { workspace = true, features = ["full"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = "1"
toml_edit    = "0.25"
reqwest      = { workspace = true, features = ["blocking", "json"] }
tar          = { workspace = true }
flate2       = { workspace = true }
lancedb      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
futures      = "0.3"
glob         = { workspace = true }
anyhow       = "1"
thiserror    = { workspace = true }
chrono       = { workspace = true }
dirs         = "6"
tempfile     = { workspace = true }
walkdir      = { workspace = true }
which        = { workspace = true }
rusqlite     = { workspace = true }

# Optional reranker dependency (enabled via --features reranker)
# llama-cpp-2 wraps llama.cpp with native Qwen3 + RANK-pooling reranker support.
llama-cpp-2 = { version = "0.1.150", optional = true }
