[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sempkg-agent"
version = "0.6.0"

description = "Grounded code-intelligence agent server over sempkg bundles (A2A / MCP / REST)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sempkg" }]
keywords = ["sempkg", "rag", "a2a", "mcp", "langchain", "code-intelligence"]

dependencies = [
    # Agent orchestration
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langgraph>=0.2.50,<0.4",
    # sempkg MCP tools -> LangChain tools
    "langchain-mcp-adapters>=0.1,<0.2",
    "mcp>=1.9,<2",
    # Inbound agent-to-agent protocol (primary transport)
    "a2a-sdk>=0.2.5,<0.4",
    # REST + MCP-mount transports share these
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    # Config + validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]
# Persistent multi-turn conversation state (set SEMPKG_AGENT_STATE_DB to use).
persist = [
    "langgraph-checkpoint-sqlite>=2.0,<3",
]

[project.scripts]
sempkg-agent = "sempkg_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sempkg_agent"]
# Ensure the chat UI asset ships in the wheel.
artifacts = ["sempkg_agent/static/*.html"]

[tool.hatch.build.targets.wheel.force-include]
"sempkg_agent/static" = "sempkg_agent/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Default run is the fast, fully-offline suite. Functional (end-to-end) tests are
# opt-in: `pytest -m functional`.
addopts = "-q -m 'not functional'"
asyncio_mode = "auto"
markers = [
    "functional: end-to-end tests requiring built sempkg/sembundle binaries, a running registry, and (for the agent backend test) an OpenRouter key + SEMPKG_AGENT_FUNCTIONAL=1. Self-skip when prerequisites are absent.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
